# steeplejack

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  clean.sh  compile_commands.json  run.sh  sj  sj.sh  vcpkg.json
assets/: CMakeLists.txt  README.md
assets/textures/rock_wall_15_1k/: rock_wall_15_1k.gltf
cmake/: README.md
cmake/toolchains/: msys2-ucrt.cmake  wsl2-gcc.cmake
config/: README.md
config/descriptor_layouts/: default.toml  shadow.toml
config/pipelines/: minimal.toml
docs/: ECS_CUBES_ONE_PLAN.md  MSYS2.md  README.md  SHADOWS.md  UBOs.md  environments.md  vcpkg.md
include/steeplejack/: Application.hpp
libs/: CMakeLists.txt
scripts/: README.md  build.sh  clean.sh  format.sh  lint.sh  run.sh  test.sh
scripts/lib/: common.sh
shaders/: CMakeLists.txt  README.md  lighting.glsl  shader.cubes_one.frag  shader.cubes_one.vert  shader.default.frag  shader.default.vert  shader.george.frag  shader.george.vert  shader.minimal.frag  shader.minimal.vert  shader.shadow.frag  shader.shadow.vert  types.glsl
src/: application.cpp  application.h  game_engine.cpp  game_engine.h  glm_config.hpp  main.cpp  vulkan_context.cpp  vulkan_context.h  vulkan_context_builder.cpp  vulkan_context_builder.h  vulkan_engine.cpp  vulkan_engine.h
src/config/: descriptor_layout_config.cpp  descriptor_layout_config.h  pipeline_config.cpp  pipeline_config.h
src/core/: Application.cpp
src/ecs/: camera.cpp  camera.h  components.h  ecs.cpp  geometry_store.h  material_store.h  registry.h  resources.h  scene.h  types.h
src/ecs/gpu/: ubo_caches.h
src/ecs/systems/: build_draw_lists.h  camera.h  flush_ubos.h  lights.h  render_forward.h  render_shadow.h  transform.h
src/gui/: framerate.h  gui.cpp  gui.h
src/model/: camera.h  lights.cpp  lights.h  material.cpp  mesh.h  model.h  node.h  primitive.h  scene.h
src/renderer/: backend.cpp  backend.h  backend_builder.cpp  backend_builder.h  contexts.h  geometry_store.cpp  geometry_store.h  material_store.cpp  material_store.h  scene_backend.cpp  scene_backend.h  scene_backend_builder.cpp  scene_backend_builder.h  scene_runner.cpp  scene_runner.h
src/scenes/: cubes_one.cpp  cubes_one.h  george.cpp  george.h  minimal_scene_runner.cpp  minimal_scene_runner.h  render_scene.h  woxel_column.cpp  woxel_column.h
src/util/: memory.h  no_copy_or_move.h  runtime_paths.cpp  runtime_paths.h
src/vulkan/: adhoc_queue.cpp  adhoc_queue.h  adhoc_queues.cpp  adhoc_queues.h  depth_buffer.cpp  depth_buffer.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_set_layout_builder.h  descriptor_set_layout_info.h  device.cpp  device.h  framebuffers.cpp  framebuffers.h  graphics_buffers.cpp  graphics_buffers.h  graphics_pipeline.cpp  graphics_pipeline.h  graphics_queue.cpp  graphics_queue.h  image.cpp  image.h  image_view.cpp  image_view.h  material.cpp  material.h  material_factory.cpp  material_factory.h  multisampler.cpp  multisampler.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  render_pass_scope.cpp  render_pass_scope.h  sampler.cpp  sampler.h  shader_module.cpp  shader_module.h  (+24 more)
src/vulkan/buffer/: buffer.cpp  buffer.h  buffer_gpu.cpp  buffer_gpu.h  buffer_host.cpp  buffer_host.h  staging_buffer.h  uniform_buffer.cpp  uniform_buffer.h  uniform_buffer_array.h
src/vulkan/pipeline/: base_pipeline.cpp  base_pipeline.h  graphics_pipeline.cpp  graphics_pipeline.h  shadow_pipeline.cpp  shadow_pipeline.h  utils.cpp  utils.h
src/woxel/: README.md  actor.h  chunk.h  column.h  math.h  world.h  woxel.h
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  test_sanity.cpp
tools/: README.md
